--- a/src/components/room/room.scss
+++ b/src/components/room/room.scss
@@ -1,11 +1,42 @@
 .room {
-  cursor: pointer;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  transition: transform 0.3s ease;
   margin: 10px;
-}
+  max-width: 500px;
+  cursor: pointer;
 
-.room.selected {
-  background-color: #f0f0f0;
+  &:hover {
+    transform: translateY(-4px);
+  }
+
+  .details {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items:baseline;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  img {
+    width: 100%;
+    max-width: 250px;
+    border-radius: 4px;
+    margin-top: 8px;
+  }
+
+  .name {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+
+  .price {
+    color: #007bff;
+    font-weight: bold;
+  }
 }
