--- a/src/components/roomList/roomList.scss
+++ b/src/components/roomList/roomList.scss
@@ -2,10 +2,25 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  
+  .error {
+  color: red;
+  font-size: 13px;
+  font-weight: 500;
+  margin-top: 2px;
+  position: absolute;
+  top: 275px;
+}
 }
 
 .rooms {
   display: flex;
   gap: 20px;
   justify-content: center;
+    position: relative;
 }
+
+.buttonContainer {
+  position: relative;
+}
+
