scss to modules

--- a/src/components/createBooking/createBooking.module.scss
+++ b/src/components/createBooking/createBooking.module.scss
@@ -1,4 +1,4 @@
-.create-booking {
+.createBooking {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
@@ -9,16 +9,16 @@
     margin-bottom: 20px;
   }
 
-  .sub-heading {
+  .subHeading {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
   }
 
-  .booking-detail,
-  .room-details,
-  .product-table,
-  .grand-total,
+  .bookingDetail,
+  .roomDetails,
+  .productTable,
+  .grandTotal,
   .buttons {
     margin-bottom: 30px;
   }
