--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -1,22 +1,18 @@
-.room {
+.product {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 16px;
   transition: transform 0.3s ease;
   margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   max-width: 500px;
   cursor: pointer;
 
   &:hover {
     transform: translateY(-4px);
-  }
-
-  .details {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items:baseline;
   }
 
   p {
@@ -30,6 +26,14 @@
     margin-top: 8px;
   }
 
+  .details {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    margin-top: 8px;
+    gap: 5px;
+  }
+
   .name {
     font-size: 1.2rem;
     font-weight: bold;
@@ -39,19 +43,21 @@
     color: #007bff;
     font-weight: bold;
   }
-  .strike {
-    text-decoration: line-through;
+
+  .chargeMethod {
+    color: #666;
+  }
+
+  .checkboxContainer {
+    margin-top: 10px;
+  }
+
+  input[type="checkbox"] {
+    cursor: pointer;
+    transform: scale(1.5);
   }
 }
 
-.disabled-room {
-  background-color: #f2f2f2;
-}
-
-.disabled-room:hover {
-  transform: none;
-}
-
-.selected-room {
+.selectedProduct {
   background-color: #9ae4f3;
 }
