error component added

--- a/src/components/roomList/roomList.module.scss
+++ b/src/components/roomList/roomList.module.scss
@@ -3,12 +3,7 @@
   flex-direction: column;
   gap: 20px;
   
-  .error {
-  color: red;
-  font-size: 13px;
-  font-weight: 500;
-  margin-top: 2px;
-  position: absolute;
+  .roomError {
   top: 275px;
 }
 }
