--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Open+Sans:wght@300;400;500;600&family=Work+Sans:wght@400;500&display=swap');
 
-h1, h2, h3, h4, h5, h6, label, p {
+h1, h2, h3, h4, h5, h6, label, p, li {
   font-family: 'Open Sans', sans-serif;
 }
 
