--- a/src/components/bookingFormSteps/roomList/room/room.module.scss
+++ b/src/components/bookingFormSteps/roomList/room/room.module.scss
@@ -45,6 +45,12 @@
 
   .checkboxContainer {
     margin-top: 10px;
+    display: none;
+  }
+
+  .totalPrice {
+    display: flex;
+    gap: 10px;
   }
 }
 
