--- a/src/components/bookingFormSteps/roomList/roomList.module.scss
+++ b/src/components/bookingFormSteps/roomList/roomList.module.scss
@@ -15,7 +15,9 @@
     position: relative;
 }
 
-.buttonContainer {
-  position: relative;
+.buttonsContainer{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding-top: 40px;
 }
-
