--- a/src/components/bookingFormSteps/createBooking/createBooking.module.scss
+++ b/src/components/bookingFormSteps/createBooking/createBooking.module.scss
@@ -2,43 +2,9 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
+}
 
-  .heading {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-
-  .subHeading {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-
-  .bookingDetail,
-  .roomDetails,
-  .productTable,
-  .grandTotal,
-  .buttons {
-    margin-bottom: 30px;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-
-    th {
-      background-color: #f2f2f2;
-    }
-
-    td {
-      font-size: 14px;
-    }
-  }
+.buttonsContainer{
+  display: flex;
+  gap: 30px;
 }
