--- a/src/components/bookingFormSteps/productList/productList.module.scss
+++ b/src/components/bookingFormSteps/productList/productList.module.scss
@@ -9,3 +9,10 @@
   gap: 20px;
   justify-content: center;
 }
+
+.buttonsContainer{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding-top: 40px;
+}
