--- a/src/components/bookingFormSteps/productList/product/product.module.scss
+++ b/src/components/bookingFormSteps/productList/product/product.module.scss
@@ -58,11 +58,12 @@
   background-color: #9ae4f3;
 }
 
-.details2 {
-  padding-top: 15px;
+.priceAndCheckbox {
+  margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  height: 50px;
 }
 
 .priceContainer {
