redux store fix

--- a/src/components/bookingFormSteps/dateAndTime/dateAndTime.module.scss
+++ b/src/components/bookingFormSteps/dateAndTime/dateAndTime.module.scss
@@ -48,6 +48,17 @@
   top: 0;
 }
 
+.errorContainer{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
 .bookingError {
-  top: 185px;
+  position: absolute;
+}
+
+.button{
+  margin-top: 50px;
 }
