--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,12 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+}
+
+p, label {
+  font-size: 16px; 
+  line-height: 1.5; 
+}
+
