--- a/src/components/summary/summary.module.scss
+++ b/src/components/summary/summary.module.scss
@@ -21,7 +21,8 @@ table {
   width: 100%;
   border-collapse: collapse;
 
-  th, td {
+  th,
+  td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
