--- a/src/components/bookingFormSteps/productList/productList.module.scss
+++ b/src/components/bookingFormSteps/productList/productList.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin: auto;
 }
 
 .products {
@@ -15,4 +16,11 @@
   gap: 30px;
   justify-content: center;
   padding-top: 40px;
+}
+
+@media (max-width: 768px) {
+  .products {
+    flex-direction: column;
+    gap: 30px;
+  }
 }
