--- a/src/components/bookingFormSteps/roomList/roomList.module.scss
+++ b/src/components/bookingFormSteps/roomList/roomList.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin: auto;
 }
 
 .rooms {
@@ -20,4 +21,11 @@
   gap: 30px;
   justify-content: center;
   padding-top: 40px;
+}
+
+@media (max-width: 768px) {
+  .rooms {
+    flex-direction: column;
+    gap: 30px;
+  }
 }
