--- a/src/components/timeDropdown/timeDropdown.module.scss
+++ b/src/components/timeDropdown/timeDropdown.module.scss
@@ -1,6 +1,8 @@
 .timeDropDown {
-  width: 200px;
+  width: 272px;
   border-radius: 4px;
-  height: 32px;
+  height: 52px;
   border: 1px solid #ccc;
+  padding: 10px;
+  cursor: pointer;
 }
