sass variables added

--- a/src/components/bookingFormSteps/dateAndTime/dateAndTime.module.scss
+++ b/src/components/bookingFormSteps/dateAndTime/dateAndTime.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .dateAndTime {
   display: flex;
   flex-direction: column;
@@ -68,7 +70,7 @@
   margin-top: 80px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: $breakpoint-md) {
   .checkInContainer,
   .checkOutContainer {
     flex-direction: column;
