--- a/src/components/bookingFormSteps/roomList/roomList.module.scss
+++ b/src/components/bookingFormSteps/roomList/roomList.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .roomList {
   display: flex;
   flex-direction: column;
@@ -25,7 +27,7 @@
   justify-content: center;
 }
 
-@media (max-width: 768px) {
+@media (max-width: $breakpoint-md) {
   .rooms {
     flex-direction: column;
     gap: 30px;
